--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="container flex-lg-column">	
 				<a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
 					<h1 class="d-lg-none"><span class="fw-bold d-lg-none text-warning">M</span> C</h3>
-					<img width="180" src="../a1/img/profile.jpg" class="d-none d-lg-block rounded-circle">
+					<img width="180" src="./img/profile.jpg" class="d-none d-lg-block rounded-circle">
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -154,7 +154,7 @@
                     <div class="col-md-4" data-aos="fade-up">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4 p-2">
-                                <img width="240" class="rounded-4 col-sm-1 col-md-12" src="../a1/img/frontend.png" alt="">
+                                <img width="240" class="rounded-4 col-sm-1 col-md-12" src="./img/frontend.png" alt="">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>FRONT-END DEVELOPER</h4>
@@ -166,7 +166,7 @@
                     <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                         <div class="card-custom rounded-4 bg-base">
                             <div class="card-custom-image rounded-4 p-2">
-                                <img width="240" class="rounded-4 col-sm-1 col-md-12" src="../a1/img/backend.png" alt="">
+                                <img width="240" class="rounded-4 col-sm-1 col-md-12" src="./img/backend.png" alt="">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>BACK-END DEVELOPER</h4>
@@ -178,7 +178,7 @@
                     <div class="col-md-4" data-aos="fade-up">
                         <div class="card-custom rounded-4 bg-base">
                             <div class="card-custom-image rounded-4 p-2">
-                                <img width="240" class="rounded-4 col-sm-1 col-md-12" src="../a1/img/fullstack.jpg" alt="">
+                                <img width="240" class="rounded-4 col-sm-1 col-md-12" src="./img/fullstack.jpg" alt="">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>FULL STACK DEVELOPER</h4>
@@ -201,17 +201,17 @@
 
                 <div class="d-flex flex-row flex-md-column" data-aos="fade-up">
                     <div>
-                        <img width="150" src="../a1/img/logo-mongodb.png"/>
-                        <img width="150" src="../a1/img/logo-nodejs.png"/>
-                        <img width="150" src="../a1/img/logo-expressjs.png"/>
-                        <img width="150" src="../a1/img/logo-react.png"/>
-                        <img width="150" src="../a1/img/logo-heroku.png"/>
+                        <img width="150" src="./img/logo-mongodb.png"/>
+                        <img width="150" src="./img/logo-nodejs.png"/>
+                        <img width="150" src="./img/logo-expressjs.png"/>
+                        <img width="150" src="./img/logo-react.png"/>
+                        <img width="150" src="./img/logo-heroku.png"/>
                     </div>
                     <div>
-                        <img width="150" src="../a1/img/logo-git.png"/>
-                        <img width="150" src="../a1/img/logo-sublime-text-3.png"/>
-                        <img width="150" src="../a1/img/logo-postman.png"/>
-                        <img width="150" src="../a1/img/logo-gitlab-ci-cd.png"/>
+                        <img width="150" src="./img/logo-git.png"/>
+                        <img width="150" src="./img/logo-sublime-text-3.png"/>
+                        <img width="150" src="./img/logo-postman.png"/>
+                        <img width="150" src="./img/logo-gitlab-ci-cd.png"/>
                     </div>
                 </div>
             </div>   
