--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- Bootstrap Link -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-		<title>My Porfolio</title>
+		<title>My Online Portfolio</title>
     <!-- External CSS -->
             <link rel="stylesheet" href="./index.css"/>
 
@@ -38,6 +38,9 @@
 						<li class="nav-item">
 							<a class="nav-link text-light" href="#services">Services</a>
 						</li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#project">Project</a>
+                        </li>
 						<li class="nav-item">
 							<a class="nav-link text-light" href="#tools">Tools</a>
 						</li>
@@ -59,8 +62,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10">
-							<h1 class="display-4" data-aos="fade-up"> Hi! I AM MATTHEW CRUZ,<span class="text-warning"> FULL STACK DEVELOPER</span></h1>
-							<p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I'm 25 yrs old and currently living in Alfonso, Cavite, Philippines were famous for having many exotic islands.</p>
+							<h1 class="display-4" data-aos="fade-up"> Hi! I'M MATTHEW CRUZ,</h1>
+                            <h1 class="text-warning">WEB DEVELOPER</h1>
+							<p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300" align="justify">with a passion for web application development and success in managing development projects using MERN Stack. Skilled in conceptualizing, designing, development, and deploying software containing logical and mathematical solutions to business problems. Dedicated to driving innovation with the ability to follow industry and technological trends, and facilitating early adoption of innovations.</p>
                     </div>
                 </div>
             </div>
@@ -75,7 +79,7 @@
                 <div class="row pb-4" data-aos="fade-up">
                     <div class="col-lg-8">
                         <h6 class="text-brand">ABOUT</h6>
-                        <h1>My Education & Experiance</h1>
+                        <h1>My Education &  Work Experience</h1>
                     </div>
                 </div>
 
@@ -87,8 +91,8 @@
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4">
-                                    <h4>Developer Career Program</h4>
-                                    <p class="text-brand mb-2">ZUITT BOOTHCAMP (BATCH 2023)</p>
+                                    <h4>ZUITT WEB DEVELOPER PROGRAM (MERN Stack)</h4>
+                                    <p class="text-brand mb-2">Main Course Package [Completer - Batch 2023]</p>
                                     <p class="mb-0">The course covers key concepts on full-stack web development, including Responsive Web Design, Rapid Prototyping and Product Deployments.</p>
                                 </div>
                             </div>
@@ -97,6 +101,7 @@
                                 <div class="bg-base p-4 rounded-4">
                                     <h4>BS BUSINESS MANAGEMENT</h4>
                                     <p class="text-brand mb-2">CAVITE STATE UNIVERSITY (2013 - 2018)</p>
+                                    <p>Indang Cavite, Philippines</p>
                                     <p class="mb-0"> MAJOR IN HUMAN RESOURCES DEVELOPMENT MANAGEMENT</p>
                                 </div>
                             </div>
@@ -106,14 +111,14 @@
 
                     <div class="col-lg-6">
 
-                        <h3 class="mb-4 mt-2" data-aos="fade-up" data-aos-delay="300">Experiance</h3>
+                        <h3 class="mb-4 mt-2" data-aos="fade-up" data-aos-delay="300">Experience</h3>
                         <div class="row gy-4">
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4">
                                     <h4>OPERATIONS SUPPORT</h4>
                                     <p class="text-brand mb-2"> MAYA (formerly known as PayMaya) (OCT. 2022 - Present)</p>
-                                    <p class="mb-0"> We do reviewing, validating and processing of Merchants applications.</p>
+                                    <p class="mb-0"> Reviewing, validating and processing of merchant's application.</p>
                                 </div>
                             </div>
 
@@ -122,14 +127,6 @@
                                     <h4>MARKETING ASSOCIATE</h4>
                                     <p class="text-brand mb-2">BRANDERS CONSTRUCTION COMPANY LTD. (JUN. 2021 - SEP. 2022)</p>
                                     <p class="mb-0"> Handles Social Media Accounts, Advertising, Client inquiries, Telemarketing and Processing Client's Requirements</p>
-                                </div>
-                            </div>
-
-                            <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                                <div class="bg-base p-4 rounded-4">
-                                    <h4>MARKETING ASSOCIATE</h4>
-                                    <p class="text-brand mb-2">NEW LIFE TECHWIN (JUL 2019 - JAN 2021)</p>
-                                    <p class="mb-0"> Handles Social Media Accounts, Adversiting, Client Presentation, Client Inquiries, and Telemarketing </p>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +142,7 @@
                 <div class="row pb-4" data-aos="fade-up">
                     <div class="col-lg-8">
                         <h6 class="text-brand">SERVICES</h6>
-                        <h1>Services that I provide</h1>
+                        <h1>Skills</h1>
                     </div>
                 </div>
 
@@ -189,6 +186,96 @@
             </div>
         </section>
         <!-- SERVICES END -->
+
+        <!-- PROJECTS-->
+        <section id="project" class="full-height px-lg-5">
+            <div class="container">
+
+                <div class="row pb-4" data-aos="fade-up">
+                    <div class="col-lg-8">
+                        <h6 class="text-brand">PROJECTS</h6>
+                      
+                    </div>
+                </div>
+
+                <div class="row gy-5">
+                    <div class="col-lg-12">
+
+                        <!-- <h3 class="mb-4" data-aos="fade-up" data-aos-delay="300">Portfolio</h3> -->
+                        <div class="row gy-4">
+
+                            <div class="col-12" data-aos="fade-up" data-aos-delay="600">
+                                <div class="bg-base p-4 rounded-4">
+                                    <h4>Portfolio</h4>
+                                    <!-- <p class="text-brand mb-2">Zuitt Bootcamp</p -->
+                                    <p class="mb-0">I created an responsive web design portfolio as my first capstone project at Zuitt Bootcamp. I took the initiative to study and able to learn the basics ang how to use tool effectively. </p>
+                                    <ul class="list mt-1 mt-2" >
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>Bootstrap</li>
+                                        <li>Github</li>
+                                    </ul>
+                                    <a href="https://mateocruz23.github.io/My-Portfolio/">                         
+                                    <img  class="project-img mx-auto d-none d-md-block " width="600" src="./img/portfolio-img.png"/>
+                                    </a>
+                                <p class="text-brand mb-2 mt-3">Links:</p>
+                                <div class="project-icons mt-2">
+                                    <a href="https://github.com/MateoCruz23/My-Portfolio">
+                                    <ion-icon name="logo-github"></ion-icon>
+                                    </a>
+                                    <a href="https://mateocruz23.github.io/My-Portfolio/">
+                                    <ion-icon name="link-outline"></ion-icon>
+                                    </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-lg-12">
+
+                        <!-- <h3 class="mb-4 mt-2" data-aos="fade-up" data-aos-delay="300">E-commerce Project</h3>
+ -->                        <div class="row gy-4">
+
+                            <div class="col-12" data-aos="fade-up" data-aos-delay="600">
+                            <div class="bg-base p-4 rounded-4">
+                                <h4>E-commerce Project</h4>
+                                    <!-- <p class="text-brand mb-2"> Zuitt Bootcamp</p> -->
+                                    <p class="mb-0"> This was our last capstone project for Zuitt Bootcamp. I connected my back-en API to the front-end part of the project, where you can register, login, order, checkout, and if you are using an admin account you can add/edit product, archive, and archive product.</p>
+                                    <ul class="list mt-1 mt-2" >
+                                        <li>React.js</li>
+                                        <li>Express.js</li>
+                                        <li>Node.js</li>
+                                        <li>MongoDB</li>
+                                        <li>CSS</li>
+                                        <li>Bootstrap</li>
+                                        <li>Gitlab</li>
+                                        <li>Postman</li>
+                                        <li>React-router-dom</li>
+                                    </ul>
+
+                                    <a href="https://capstone3-cruz-8nu3lw2ao-matthewavinantecruz.vercel.app/">                         
+                                    <img  class="project-img mx-auto d-none d-md-block " width="600" src="./img/ecommerce-img.png"/>
+                                    </a>     
+                            <p class="text-brand mb-2 mt-3">Links:</p>
+                            <div class="project-icons mt-2">
+                                <a href="https://gitlab.com/matthewavinantecruz/capstone3">
+                                <ion-icon name="logo-gitlab"></ion-icon>
+                                </a>
+                                <a href="https://capstone3-cruz-8nu3lw2ao-matthewavinantecruz.vercel.app/">
+                                <ion-icon name="link-outline"></ion-icon>
+                                </a>
+                                   </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- PROJECTS END-->
  
         <!-- TOOLS START -->
         <section id="tools" class="full-height px-lg-5">
@@ -286,22 +373,18 @@
                     </div>
                     <div class="col-auto">
                         <div class="social-icons justify-content-center">
-                           <a href="https://www.facebook.com/misterdanielford">
+
+                            <a href="https://www.linkedin.com/in/matthew-cruz-5b7442250/">
+                           <ion-icon name="logo-linkedin"></ion-icon>
+                           </a>
+                           <a href="https://www.facebook.com/cruzmatthewavinante">
                            <ion-icon name="logo-facebook"></ion-icon>
                            </a>
-                           <a href="https://www.twitter.com/">
-                           <ion-icon name="logo-twitter"></ion-icon>
-                           </a>
-                           <a href="https://instagram.com/">
-                           <ion-icon name="logo-instagram"></ion-icon>
-                           </a>
-                           <a href="https://youtube.com/">
-                           <ion-icon name="logo-youtube"></ion-icon>
-                           </a>
+                           
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> 
         </footer>
         <!-- FOOTER END-->
 
