--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
 							<h1 class="display-4" data-aos="fade-up"> Hi! I'M MATTHEW CRUZ,</h1>
                             <h1 class="text-warning">WEB DEVELOPER</h1>
 							<p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300" align="justify">with a passion for web application development and success in managing development projects using MERN Stack. Skilled in conceptualizing, designing, development, and deploying software containing logical and mathematical solutions to business problems. Dedicated to driving innovation with the ability to follow industry and technological trends, and facilitating early adoption of innovations.</p>
-                    </div>
+                            <a href="./img/MatthewCruz-CV.pdf"/>
+                            <button type="button" class="btn btn-dark col-auto" data-target="#staticBackdrop">
+                                DOWNLOAD RESUME
+                            </button>
+                            </a>
+                    </div>  
                 </div>
             </div>
 
